cambios necesarios a las ventanas

--- a/3/news.html
+++ b/3/news.html
@@ -55,12 +55,12 @@
 						<div class="grid_12">
 							<nav>
 								<ul class="menu">
-									<li><a href="index.html">Home Page</a><strong></strong></li>
-									<li><a href="health.html">Health Care</a><strong></strong></li>
-									<li><a href="advices.html">Advices</a><strong></strong></li>
-									<li><a href="staff.html">Our Staff</a><strong></strong></li>
-									<li class="active"><a href="news.html">News</a><strong></strong></li>
-									<li class="last"><a href="contacts.html">Contacts</a><strong></strong></li>
+									<li class="active"><a href="index.html">Inicio</a><strong></strong></li>
+                                        <li><a href="staff.html">Academicos</a><strong></strong></li>
+                                        <li><a href="health.html">Estudiantes</a><strong></strong></li>
+                                        <li><a href="advices.html">Laboral</a><strong></strong></li>
+                                        <li><a href="news.html">Noticias</a><strong></strong></li>
+                                        <li class="last"><a href="contacts.html">Contactos</a><strong></strong></li>
 								</ul>
 							</nav>
 						</div>
