--- a/3/contacts.html
+++ b/3/contacts.html
@@ -60,7 +60,7 @@
                                         <li><a href="health.html">Estudiantes</a><strong></strong></li>
                                         <li><a href="advices.html">Laboral</a><strong></strong></li>
                                         <li><a href="news.html">Noticias</a><strong></strong></li>
-                                        <li class="last"><a href="contacts.html">Contactos</a><strong></strong></li>
+                                        <li class="last active"><a href="contacts.html">Contactos</a><strong></strong></li>
 								</ul>
 							</nav>
 						</div>
