--- a/3/news.html
+++ b/3/news.html
@@ -55,11 +55,11 @@
 						<div class="grid_12">
 							<nav>
 								<ul class="menu">
-									<li class="active"><a href="index.html">Inicio</a><strong></strong></li>
+									<li><a href="index.html">Inicio</a><strong></strong></li>
                                         <li><a href="staff.html">Academicos</a><strong></strong></li>
                                         <li><a href="health.html">Estudiantes</a><strong></strong></li>
                                         <li><a href="advices.html">Laboral</a><strong></strong></li>
-                                        <li><a href="news.html">Noticias</a><strong></strong></li>
+                                        <li class="active"><a href="news.html">Noticias</a><strong></strong></li>
                                         <li class="last"><a href="contacts.html">Contactos</a><strong></strong></li>
 								</ul>
 							</nav>
