cambios a las vistas

--- a/3/index.html
+++ b/3/index.html
@@ -127,11 +127,11 @@
                         <article class="grid_3">
                             <h3>Mision </h3>
                             La Escuela de Informática es la unidad académica que forma profesionales de la ingeniería especializada en informática, computación y comunicaciones, a través de una docencia especializada y apoyada con investigación preferentemente aplicada, con énfasis en el uso de las nuevas tecnologías, acorde con los requerimientos actuales y futuros tanto del país como del mundo global.
-Se proyecta socialmente a través de una cultura coherente con la misión institucional y mediante la prestación de servicios de calidad en el ámbito de la docencia y la extensión. Formará especialistas con una sólida base científica y tecnológica de permanente vigencia en el ejercicio profesional, priorizando los conocimientos duraderos sobre los mediáticos, fomentando los hábitos efectivos de trabajo, estimulando la capacidad de autoaprendizaje y de adaptación a los cambios del entorno y contribuyendo a la evolución de la tecnología. Todo lo anterior, complementado con aspectos éticos y morales que favorezcan la formación integral tanto en lo personal como en lo profesional.  <a class="link-1" href="#">>></a>
+Se proyecta socialmente a través de una cultura coherente con la misión institucional y mediante la prestación de servicios de calidad en el ámbito de la docencia y la extensión.   <a class="link-1" href="#">>></a>
                         </article>
                         <article class="grid_3">
                             <h3>Vision</h3>
-                            La Escuela de Informática de la Facultad de Ingeniería de la Universidad Tecnológica Metropolitana, proyecta una imagen y un posicionamiento sólidos en el ámbito de la educación superior universitaria presencial y no presencial en ingeniería, destacando una amplia formación en el uso de las tecnologías de punta en informática, computación y comunicaciones. Orientará su quehacer, tanto a la formación de pre y post grado como a la extensión y educación continua, a base de una excelencia académica con un enfoque pedagógico innovador que asegure la calidad de los profesionales formados, en un marco de colaboración y vinculación académica y empresarial, de referencia nacional e internacional.   <a class="link-1" href="#">>></a>
+                            La Escuela de Informática de la Facultad de Ingeniería de la Universidad Tecnológica Metropolitana, proyecta una imagen y un posicionamiento sólidos en el ámbito de la educación superior universitaria presencial y no presencial en ingeniería,    <a class="link-1" href="#">>></a>
                         </article>
                         <article class="grid_3">
                             <h3>Perfil Profesional</h3>
@@ -187,13 +187,13 @@ Se proyecta socialmente a través de una cultura coherente con la misión instit
                     <div class="wrapper">
                         <div class="grid_4">
                             <span class="footer-text">
-                                <span>Universidad Tecnologica Metropolitana &copy; 2013 Privacy Policy</span>
-                                <a rel="nofollow" href="http://www.templatemonster.com/">Website Template</a> by TemplateMonster.com
+                                <span>Universidad Tecnologica Metropolitana &copy; 2013 Politica de Privacidad</span>
+                                <a rel="nofollow" href="http://www.utem.cl/">sitio Web Grupo 4</a>  Estudiantes UTEM
                             </span>
                             <div><!-- {%FOOTER_LINK} --></div>
                         </div>
                         <div class="grid_4 suffix_1">
-                            <strong class="support-phone"><strong>+562</strong> 7877900</strong>
+                            <strong class="support-phone"><strong>+562</strong>  7877100</strong>
                         </div>
                         <div class="grid_3">
                             <ul class="list-services">
