arregle ventana de los profesores

--- a/3/staff.html
+++ b/3/staff.html
@@ -77,8 +77,8 @@
 				<div class="border-bot margin-bot">
 					<article class="grid_12">
 						<div class="aligncenter inner-top">
-							<strong class="title-1">&quot;Bring harmony to your family!&quot;</strong>
-							<strong class="title-2">You have to be persistent to establish and maintain healthy, two-way communication. We can help.</strong>
+							<strong class="title-1">&quot;Cuerpo Academico&quot;</strong>
+							<strong class="title-2">A lo largo de su desarrollo, la Unidad de Informática y Computación, se ha nutrido de un grupo de profesionales, que con su experiencia y amor por la docencia, han enriquecido la formación de nuestros estudiantes. </strong>
 						</div>
 					</article>
 					<div class="clear"></div>
@@ -91,26 +91,23 @@
 							<div class="extra-wrap">
 								<h6 class="reg p0"><a class="link" href="#">Mauro Castillo</a></h6>
 								<p>Director de Escuela </p>	
-								    Profesor de Matemáticas y Computación de la Universidad de Santiago 									(Chile) obtenido el año 1991.
-    Licenciado en Educación de la Universidad de Santiago (Chile) obtenido el año 1991.
-    Ingeniero de Ejecución en Informática de la Universidad Tecnológica Metropolitana (Chile) obtenido el año 1995.
-    Doctor Ph. D. ( c ) Inteligencia Artificial de la Universidad Politécnica De Cataluña (España) obtenido el año 2005.
+								    
 							</div>
 						</div>
 						<div class="wrapper img-indent-bot">
 							<figure class="img-indent"><img src="images/page4-img3.jpg" alt="" /></figure>
 							<div class="extra-wrap">
-								<h6 class="reg p0"><a class="link" href="#">STELLA GROSH</a></h6>
+								<h6 class="reg p0"><a class="link" href="#">Martita Rojas</a></h6>
 								<p>Nam elit magna</p>
-								Fam nec risus in urna tempor placerat non a erat. In id velit eget purus ultricies pharetra. Quisque luctus magna neque. Praesent vitae orci non lorem gravida dapibus. Maecenas consequat pulvinar diam vel sollicitudin.
+								profesora de base de datos.
 							</div>
 						</div>
 						<div class="wrapper">
 							<figure class="img-indent"><img src="images/page4-img5.jpg" alt="" /></figure>
 							<div class="extra-wrap">
-								<h6 class="reg p0"><a class="link" href="#">ALAN SMITH</a></h6>
+								<h6 class="reg p0"><a class="link" href="#">Rene Peña Crack!</a></h6>
 								<p>Nam elit magna</p>
-								Fam nec risus in urna tempor placerat non a erat. In id velit eget purus ultricies pharetra. Quisque luctus magna neque. Praesent vitae orci non lorem gravida dapibus. Maecenas consequat pulvinar diam vel sollicitudin.
+								profesor de simulacion.
 							</div>
 						</div>
 					</article>		 
@@ -119,26 +116,25 @@
 							<div class="wrapper img-indent-bot">
 								<figure class="img-indent"><img src="images/page4-img2.jpg" alt="" /></figure>
 								<div class="extra-wrap">
-									<h6 class="reg p0"><a class="link" href="#">MYRA JOHNSON</a></h6>
+									<h6 class="reg p0"><a class="link" href="#">Sara Rojas</a></h6>
 									<p>Nam elit magna</p>
-									Donec id lacus quam. Nulla sit amet nibh orci. Sed eu aliquam lectus. Sed semper porta viverra. Nulla erat dui, luctus vitae interdum quis, facilisis a velit hasellus eu sodales nulla raesent tincidunt bibendum leo nec.
+									profesora de Base de datos.
 								</div>
 							</div>
 							<div class="wrapper img-indent-bot">
 								<figure class="img-indent"><img src="images/page4-img4.jpg" alt="" /></figure>
 								<div class="extra-wrap">
-									<h6 class="reg p0"><a class="link" href="#">JESSICA POOL</a></h6>
+									<h6 class="reg p0"><a class="link" href="#">Ricardo Corbinaud</a></h6>
 									<p>Nam elit magna</p>
-									Donec id lacus quam. Nulla sit amet nibh orci. Sed eu aliquam lectus. Sed semper porta viverra. Nulla erat dui, luctus vitae interdum quis, facilisis a velit hasellus eu sodales nulla raesent tincidunt bibendum leo nec.
+									Programador en corbi C.
 								</div>
 							</div>
 							<div class="wrapper">
 								<figure class="img-indent"><img src="images/page4-img6.jpg" alt="" /></figure>
 								<div class="extra-wrap">
-									<h6 class="reg p0"><a class="link" href="#">JOHN FRANKLIN</a></h6>
+									<h6 class="reg p0"><a class="link" href="#">Pelao Chucheta</a></h6>
 									<p>Nam elit magna</p>
-									Donec id lacus quam. Nulla sit amet nibh orci. Sed eu aliquam lectus. Sed semper porta viverra. Nulla erat dui, luctus vitae interdum quis, facilisis a velit hasellus eu sodales nulla raesent tincidunt bibendum leo nec.
-								</div>
+									Wn weno pa chuchear.							</div>
 							</div>
 						</div>
 					</article>		   
