footer de la pagina academicos

--- a/3/staff.html
+++ b/3/staff.html
@@ -149,8 +149,8 @@
 				<div class="wrapper">
 					<div class="grid_4">
 						<span class="footer-text">
-							<span>Family Center &copy; 2011 Privacy Policy</span>
-							<a rel="nofollow" href="http://www.templatemonster.com/">Website Template</a> by TemplateMonster.com
+							<span>UTEM &copy; 2013 Politica de Privacidad</span>
+							<a rel="nofollow" href="http://www.utem.cl">http://www.utem.cl</a> by Grupo4
 						</span>
 						<div><!-- {%FOOTER_LINK} --></div>
 					</div>
