--- a/3/contacts.html
+++ b/3/contacts.html
@@ -99,16 +99,16 @@
 							</fieldset>						
 						</form>
 					</article>
-					<article class="grid_4">
+						<article class="grid_4">
 						<h2>Find Us</h2>
 						<figure class="img-indent-bot">
-							<iframe width="300" height="210" src="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Brooklyn,+New+York,+NY,+United+States&amp;aq=0&amp;sll=37.0625,-95.677068&amp;sspn=61.282355,146.513672&amp;ie=UTF8&amp;hq=&amp;hnear=Brooklyn,+Kings,+New+York&amp;ll=40.649974,-73.950005&amp;spn=0.01628,0.025663&amp;z=14&amp;iwloc=A&amp;output=embed"></iframe>
-						</figure>
+                                                    <iframe width="300" height="210" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=es&amp;geocode=&amp;q=Jos%C3%A9+Pedro+Alessandri+1242,+Santiago,+Chile&amp;aq=t&amp;sll=37.0625,-95.677068&amp;sspn=43.172547,86.572266&amp;ie=UTF8&amp;hq=&amp;hnear=Jos%C3%A9+Pedro+Alessandri+1242,+%C3%91u%C3%B1oa,+Santiago,+Regi%C3%B3n+Metropolitana,+Chile&amp;t=m&amp;z=14&amp;ll=-33.466001,-70.598277&amp;output=embed"></iframe><br />
+                                                    </figure>
 						<dl>
 							<dt class="indent-bot">8901 Marmora Road,<br>Glasgow, D04 89GR.</dt>
 							<dd><span>Freephone:</span>  +1 800 559 6580</dd>
 							<dd><span>Telephone:</span>  +1 959 603 6035</dd>
-							<dd><span>FAX:</span>  +1 504 889 9898</dd>
+							<dd><span>FOXO:</span>  +1 504 889 9898</dd>
 							<dd><span>E-mail:</span> <a href="#">mail@demolink.org</a></dd>
 						</dl>
 					</article>
