--- a/3/staff.html
+++ b/3/staff.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<title></title>
 	<meta charset="utf-8">
@@ -162,7 +162,7 @@
 							<li><a class="l-1" href="#"></a></li>
 							<li><a class="l-2" href="#"></a></li>
 							<li><a class="l-3" href="#"></a></li>
-							<li><a class="l-4" href="#"></a></li>
+		
 						</ul>
 					</div>
 				</div>
