--- a/3/index.html
+++ b/3/index.html
@@ -190,8 +190,8 @@ VP9 está libre de royalties y ha sido desarrollado por Google como alternativa 
                     <div class="wrapper">
                         <div class="grid_4">
                             <span class="footer-text">
-                                <span>Universidad Tecnologica Metropolitana &copy; 2014 Politica de Privacidad</span>
-                                <a rel="nofollow" href="UTEM">http://www.utem.cl</a>  http://www.utem.cl/
+                                <span>Universidad Tecnológica Metropolitana  &copy; 2014 Política de Privacidad</span>
+                                <a rel="nofollow" href="UTEM">http://www.utem.cl</a>  
                             </span>
                             <div><!-- {%FOOTER_LINK} --></div>
                         </div>
