--- a/3/staff.html
+++ b/3/staff.html
@@ -144,31 +144,31 @@
 	</section>
 <!-- footer -->
 	<footer>
-		<div class="main">
-			<div class="container_12">
-				<div class="wrapper">
-					<div class="grid_4">
-						<span class="footer-text">
-							<span>UTEM &copy; 2013 Politica de Privacidad</span>
-							<a rel="nofollow" href="http://www.utem.cl">http://www.utem.cl</a> by Grupo4
-						</span>
-						<div><!-- {%FOOTER_LINK} --></div>
-					</div>
-					<div class="grid_4 suffix_1">
-						<strong class="support-phone"><strong>+1(800)</strong> 123-1234</strong>
-					</div>
-					<div class="grid_3">
-						<ul class="list-services">
-							<li><a class="l-1" href="#"></a></li>
-							<li><a class="l-2" href="#"></a></li>
-							<li><a class="l-3" href="#"></a></li>
-		
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-	</footer>
+            <div class="main">
+                <div class="container_12">
+                    <div class="wrapper">
+                        <div class="grid_4">
+                            <span class="footer-text">
+                                <span>Universidad Tecnológica Metropolitana  &copy; 2014 Política de Privacidad</span>
+                                <a rel="nofollow" href="UTEM">http://www.utem.cl</a>  
+                            </span>
+                            <div><!-- {%FOOTER_LINK} --></div>
+                        </div>
+                        <div class="grid_4 suffix_1">
+                            <strong class="support-phone"><strong>+562</strong>  7877100</strong>
+                        </div>
+                        <div class="grid_3">
+                            <ul class="list-services">
+                                <li><a class="l-1" href="#"></a></li>
+                                <li><a class="l-2" href="#"></a></li>
+                                <li><a class="l-3" href="#"></a></li>
+                                <li><a class="l-4" href="#"></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
 	<script type="text/javascript"> Cufon.now(); </script>
 </body>
 </html>
